--- a/front/theme/vitioeno/global.scss
+++ b/front/theme/vitioeno/global.scss
@@ -38,11 +38,7 @@ header {
     width: 100%;
     flex-direction: row;
 }
-
-// #menu-container {
-//     height: 100%;
-// }
-
+ 
 #main-content {
     display: flex;
     flex-direction: column;
@@ -70,9 +66,7 @@ a:active {
 }
 
 @media (max-width: 768px) {
-    #menu-container {
-        height: auto;
-    }
+     
     section#content-wrapper {
         flex-direction: column;
     }
@@ -120,6 +114,15 @@ a:active {
 
 .btn.btn-link:hover {
     border: 1px solid black;
+}
+
+.wrapper .page-wrap .app-sidebar .sidebar-content {
+  position: relative;
+  height: -webkit-calc(100vh - 60px);
+  height: -moz-calc(100vh - 60px);
+  height: calc(100vh - 60px);
+  overflow: auto;
+  z-index: 4;
 }
 
 // /*************************************
